--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,7 +1,7 @@
-font_family      Ubuntu Mono derivative Powerline
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
+font_family      Cascadia Code PL SemiLight
+bold_font        Cascadia Code PL Bold
+italic_font      Cascadia Code PL SemiLight Italic 
+bold_italic_font Cascadia Code PL Bold Italic
 font_size        12.0
 
 include github.conf
