--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2,6 +2,27 @@ font_family      Cascadia Code PL SemiLight
 bold_font        Cascadia Code PL Bold
 italic_font      Cascadia Code PL SemiLight Italic 
 bold_italic_font Cascadia Code PL Bold Italic
-font_size        12.0
+font_size        16.0
 
-include github.conf
+adjust_line_height  0
+adjust_column_width 0
+
+disable_ligatures never
+box_drawing_scale 0.001, 1, 1.5, 2
+enabled_layouts   splits:split_axis=horizontal
+
+map F5 launch        --location=hsplit
+map F6 launch        --location=vsplit
+map F7 layout_action rotate
+
+map shift+up    move_window up
+map shift+left  move_window left
+map shift+right move_window right
+map shift+down  move_window down
+
+map ctrl+left  neighboring_window left
+map ctrl+right neighboring_window right
+map ctrl+up    neighboring_window up
+map ctrl+down  neighboring_window down
+
+include ./github.conf
