--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2,10 +2,13 @@ font_family      Cascadia Code PL SemiLight
 bold_font        Cascadia Code PL Bold
 italic_font      Cascadia Code PL SemiLight Italic 
 bold_italic_font Cascadia Code PL Bold Italic
-font_size        16.0
+font_size        18.0
 
 adjust_line_height  0
 adjust_column_width 0
+
+active_border_color   #7aa2f7
+inactive_border_color #545c7e
 
 disable_ligatures never
 box_drawing_scale 0.001, 1, 1.5, 2
@@ -20,9 +23,11 @@ map shift+left  move_window left
 map shift+right move_window right
 map shift+down  move_window down
 
-map ctrl+left  neighboring_window left
-map ctrl+right neighboring_window right
-map ctrl+up    neighboring_window up
-map ctrl+down  neighboring_window down
+window_padding_width 10
+window_border_width  1pt
 
-include ./github.conf
+tab_bar_style fade
+tab_fade      0.10 0.35 0.75 1
+
+# Theme
+include ./tokyonight.conf
